src/test/ui/resolve/levenshtein.stderr
error[E0412]: cannot find type `esize` in this scope
  --> $DIR/levenshtein.rs:15:11
   |
15 | fn foo(c: esize) {} // Misspelled primitive type name.
   |           ^^^^^ did you mean `isize`?

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:20:10
   |
20 | type A = Baz; // Misspelled type name.
   |          ^^^ did you mean `Bar`?

error[E0412]: cannot find type `Opiton` in this scope
  --> $DIR/levenshtein.rs:22:10
   |
22 | type B = Opiton<u8>; // Misspelled type name from the prelude.
   |          ^^^^^^ did you mean `Option`?

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/levenshtein.rs:26:14
   |
26 |     type A = Baz; // No suggestion here, Bar is not visible
   |              ^^^ not found in this scope

error[E0425]: cannot find value `MAXITEM` in this scope
  --> $DIR/levenshtein.rs:34:20
   |
34 |     let v = [0u32; MAXITEM]; // Misspelled constant name.
   |                    ^^^^^^^ did you mean `MAX_ITEM`?

error[E0425]: cannot find function `foobar` in this scope
  --> $DIR/levenshtein.rs:36:5
   |
36 |     foobar(); // Misspelled function name.
   |     ^^^^^^ did you mean `foo_bar`?

error[E0412]: cannot find type `first` in module `m`
  --> $DIR/levenshtein.rs:38:15
   |
38 |     let b: m::first = m::second; // Misspelled item in module.
   |               ^^^^^ did you mean `First`?

error[E0425]: cannot find value `second` in module `m`
  --> $DIR/levenshtein.rs:38:26
   |
38 |     let b: m::first = m::second; // Misspelled item in module.
   |                          ^^^^^^ did you mean `Second`?

error: aborting due to 8 previous errors

